--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="description" content="Index">
         <meta name="author" content="Mario Esparza">
-        <link href="../css/index.css" rel="stylesheet" media="all" type="text/css"/>
+        <link href="./css/index.css" rel="stylesheet" media="all" type="text/css"/>
     </head>
     <body>
         <div class="animaciones">
