--- a/index.html
+++ b/index.html
@@ -1,22 +1,84 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Index</title>
+        <title>Menu</title>
         <meta charset="UTF-8">
-        <meta name="description" content="Index">
+        <meta name="description" content="Menu">
         <meta name="author" content="Mario Esparza">
-        <link href="./css/index.css" rel="stylesheet" media="all" type="text/css"/>
+        <link href="27_menu.css" rel="stylesheet" media="all" type="text/css"/>
     </head>
     <body>
-        <div class="animaciones">
-            <div class="titulo">
-                <p><b>ANIMACIONES</b></p>
+        <header>
+            <picture>
+                <img src="../img/balmis/logo_conselleria_180px.png">
+                <img src="../img/balmis/cropped-Logo_IES_Transparente_Blanco_v1-3-1.png">
+            </picture>
+            <a><b>IES Doctor Balmis</b></a>
+        </header>
+        <nav>
+            <div class="dropdown">Inicio
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                </div>
             </div>
-            <div class="cuadrados">
-                <div></div>
-                <div></div>
-                <div></div>
+            <div class="dropdown">General
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                </div>
             </div>
-        </div>
+            <div class="dropdown">Secretaria
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                </div>
+            </div>
+            <div class="dropdown">Alumnado
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                </div>
+            </div>
+            <div class="dropdown">Oferta Educativa
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                </div>
+            </div>
+            <div class="dropdown">Departamentos
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                </div>
+            </div>
+            <div class="dropdown">Actividades
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                </div>
+            </div>
+            <div class="dropdown">FCT
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                </div>
+            </div>
+            <div class="dropdown">CDC
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                </div>
+            </div>
+        </nav>
     </body>
 </html>
