Index css correcto

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="description" content="Menu">
         <meta name="author" content="Mario Esparza">
-        <link href="27_menu.css" rel="stylesheet" media="all" type="text/css"/>
+        <link href="index.css" rel="stylesheet" media="all" type="text/css"/>
     </head>
     <body>
         <header>
