--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <body>
         <header>
             <picture>
-                <img src="../img/balmis/logo_conselleria_180px.png">
-                <img src="../img/balmis/cropped-Logo_IES_Transparente_Blanco_v1-3-1.png">
+                <img src="./img/balmis/logo_conselleria_180px.png">
+                <img src="./img/balmis/cropped-Logo_IES_Transparente_Blanco_v1-3-1.png">
             </picture>
             <a><b>IES Doctor Balmis</b></a>
         </header>
